<resources>
    <!-- App -->
    <string name="app_name">Pycca</string>

    <!-- MultiLoginActivity -->
    <string name="login_email">Inicia sesión con tu correo</string>
    <string name="login_facebook">Inicia sesión con Facebook</string>
    <string name="login_google">Inicia sesión con Google</string>
    <string name="login_twitter">Inicia sesión con Twitter</string>
    <string name="new_here_register_now">¿Eres nuevo aquí? Regístrate ahora</string>
    <string name="or">o</string>
    <string name="terms_use">Condiciones de uso</string>

    <!-- SignUpActivity -->
    <string name="sign_in">Registrarse</string>
    <string name="are_you_club_pycca_partner">¿Eres socio ClubPycca?</string>
    <string name="identification_card">Cédula</string>
    <string name="club_pycca_card_number">Número de tarjeta ClubPycca</string>

    <!-- LoginActivity -->
    <string name="email">Correo electrónico</string>
    <string name="forgot_password">¿Olvidaste la contraseña?</string>
    <string name="login">Iniciar sesión</string>
    <string name="password">Contraseña</string>

    <!-- ForgotPasswordActivity -->
    <string name="reset_password">Restablecer contraseña</string>

    <!-- HostActivity -->
    <string name="home">Home</string>
    <string name="coupon">Cupones</string>
    <string name="club_pycca">ClubPycca</string>
    <string name="buy">Comprar</string>
    <string name="more">Más</string>

    <!-- ClubPyccaFragment -->
    <string name="account_status">Estado de cuenta</string>
    <string name="accountStatus">Consulta de saldo</string>
    <string name="card_locking">Bloquear tarjeta</string>
    <string name="club_pycca_card_locked_enter_another">Su tarjeta ClubPycca está bloqueada, ¿Desea ingresar otra?</string>
    <string name="quota_calculator">Calculadora de cuotas</string>
    <string name="quota_increase">Incremento de cupo</string>
    <string name="virtual_card">Tarjeta virtual</string>

    <!-- QuotaIncreaseActivity -->
    <string name="choose_increase_apply">Escoja el incremento al que desea aplicar:</string>
    <string name="increase">Incremento</string>
    <string name="quota_increase_club_pycca_card">Incremento de cupo tarjeta ClubPycca</string>
    <string name="quota_increase_parallel_super_credit">Incremento de cupo paralelo SúperCrédito</string>
    <string name="request">Solicitar</string>
    <string name="tell_us_requested_quota">Indícanos el cupo solicitado</string>

    <!-- VirtualCardActivity -->
    <string name="client_since">Cliente desde:</string>

    <!-- CardLockingActivity -->
    <string name="additional_cards">Tarjetas adicionales</string>
    <string name="lock">Bloquear</string>
    <string name="lost">Extraviada</string>
    <string name="principal_card">Tarjeta principal</string>
    <string name="reason">Motivo</string>
    <string name="stole">Robo</string>
    <string name="sure_lock_card">Está seguro de bloquear la tarjeta</string>
    <string-array name="reason_array">
        <item>Extraviada</item>
        <item>Robo</item>
    </string-array>

    <!-- MoreFragment -->
    <string name="club_pycca_partner">Socio ClubPycca</string>
    <string name="not">No</string>
    <string name="profile">Perfil</string>
    <string name="contact_us">Contáctenos</string>
    <string name="go_nearest_shop">Ir a la tienda más cercana</string>
    <string name="our_shops">Nuestras tiendas</string>
    <string name="yes">Si</string>
    <string-array name="contact_us_array">
        <item>Llamada</item>
        <item>Correo electrónico</item>
    </string-array>

    <!-- ProfileActivity -->
    <string name="logout">Cerrar sesión</string>
    <string name="not_registered">No registrada</string>

    <!-- OurShopDetailActivity -->
    <string name="address">Dirección</string>
    <string name="how_get">Cómo llegar</string>
    <string name="opening_hours">Horario de atención</string>

    <!-- BalanceActivity -->
    <string name="card_number">Número de tarjeta</string>
    <string name="available_credit">Crédito disponible</string>
    <string name="used_quota">Crédito utilizado</string>
    <string name="aproved_quota">Cupo aprobado</string>
    <string name="pay_until">Pagar hasta</string>

    <!-- AccountStatusActivity -->
    <string name="summary_account_status">Resúmen del estado de cuenta</string>
    <string name="download_pdf">Estado de cuenta</string>
    <string name="as_card_number">Número de tarjeta</string>
    <string name="as_quota_to_pay">Cuota a pagar</string>
    <string name="as_pay_until">Pagar</string>
    <string name="overdue_balance">Saldo vencido:</string>
    <string name="download_succesfull">Estado de cuenta descargado</string>
    <string name="download_error">No se pudo descargar el archivo</string>

    <!-- AlertDialogClubPyccaPartner -->
    <string name="validate">Validar</string>
    <string name="information_club_pycca_partner">Si eres Socio ClubPycca por favor ingresa la siguiente información:</string>
    <string name="are_you_not_partner">¿No eres socio?</string>
    <string name="request_now">Solicítalo ahora</string>

    <!-- ClubPyccaPartnerActivity -->
    <string name="name">Nombres</string>
    <string name="last_name">Apellidos</string>
    <string name="born_date">Fecha de nacimiento (AAAA-MM-DD)</string>
    <string name="identification_number">Cédula</string>
    <string name="cpp_email">Email</string>
    <string name="phone_number">Teléfono convencional</string>
    <string name="cellphone_number">Teléfono celular</string>
    <string name="cpp_address">Dirección</string>
    <string name="ok_message">En máximo 48 horas nos comunicaremos contigo</string>
    <string name="request_card">Solicitar tarjeta</string>
    <string name="accept">Aceptar</string>

    <!-- QuotaCalculatorActivity -->
    <string name="amount_to_differ">Monto a diferir</string>
    <string name="calculate">Calcular</string>
    <string name="calculate_again">Calcular de nuevo</string>
    <string name="quotas_to_differ">Cuotas a diferir</string>
    <string name="amount">Valor</string>
    <string name="total">Total a pagar</string>

    <!-- Validations -->
    <string name="club_pycca_card_number_required">Número de tarjeta ClubPycca requerida</string>
    <string name="email_required">Correo electrónico requerido</string>
    <string name="identification_card_required">Cédula requerida</string>
    <string name="invalid_email">Correo electrónico inválido</string>
    <string name="password_required">Contraseña requerida</string>
    <string name="permission_necessary">El permiso es necesario para utilizar esta opción</string>
    <string name="permissions_necessary">Los permisos son necesarios para utilizar todas las opciones en la aplicación</string>
    <string name="reason_required">Motivo requerido</string>
    <string name="link_not_found">No se ha encontrado una url asociada</string>
    <string name="all_fields_required">Debe completar todos los campos</string>
    <string name="invalid_date">La fecha es inválida</string>

    <!-- Confirmation Messages-->
    <string name="confirmation_link_email_sent">Se ha enviado un enlace a su correo electrónico</string>

    <!-- Error Messages -->
    <string name="error_check_internet_connection">Revise su conexión a internet</string>
    <string name="error_default">Por favor revise su conexión a internet</string>
    <string name="error_email_already_use">El correo electrónico ya se encuentra en uso</string>
    <string name="error_invalid_credentials">Las credenciales son inválidas</string>
    <string name="error_password_least_six_characters">La contraseña debe tener mínimo seis caracteres</string>
    <string name="error_touch_retry">Toca para reintentar</string>
    <string name="error_unable_connect">No se puede conectar</string>
    <string name="error_user_not_exist">El usuario no existe</string>

    <!-- Facebook -->
    <string name="facebook_app_id">1854965214584839</string>
    <string name="fb_login_protocol_scheme">fb1854965214584839</string>
</resources>
