<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".quotacalculator.QuotaCalculatorActivity">

    <LinearLayout
        android:id="@+id/ll_root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10">

            <LinearLayout
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:fontFamily="@font/montserrat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quota_calculator"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_medium" />

            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:orientation="vertical"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin">

                <TextView
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_increase_apply"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_medium" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rb_quota_increase_club_pycca_card"
                        android:fontFamily="@font/montserrat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quota_increase_club_pycca_card"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_medium" />

                    <RadioButton
                        android:id="@+id/rb_quota_increase_parallel_super_credit"
                        android:fontFamily="@font/montserrat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/quota_increase_parallel_super_credit"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_medium" />

                </RadioGroup>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_tell_us_requested_quota"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textColorHint="@android:color/black">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tiet_tell_us_requested_quota"
                        android:fontFamily="@font/montserrat"
                        android:hint="@string/tell_us_requested_quota"
                        android:inputType="numberDecimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_medium" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_request"
                    android:background="@drawable/button_default_style"
                    android:fontFamily="@font/montserrat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/request"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>