<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".clubpyccapartner.ClubPyccaPartnerActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/ll_loading"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lav_loading"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            app:lottie_autoPlay="false"
            app:lottie_fileName="loading_animation.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_done"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lav_done"
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:lottie_autoPlay="false"
            app:lottie_fileName="done_animation.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="false" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_error"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lav_error"
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:lottie_autoPlay="false"
            app:lottie_fileName="failure_animation.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="false" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/ll_form_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_vertical_small_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/club_pycca_partner"
                        android:gravity="center"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textSize="28sp"
                        android:textColor="@color/colorAccent"/>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_medium_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_medium_margin"
                    android:layout_marginTop="@dimen/activity_vertical_small_margin"
                    android:textColorHint="@android:color/black">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tiet_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_medium_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_medium_margin"
                    android:layout_marginTop="@dimen/activity_vertical_small_margin"
                    android:textColorHint="@android:color/black">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tiet_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_medium_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_medium_margin"
                    android:layout_marginTop="@dimen/activity_vertical_small_margin"
                    android:textColorHint="@android:color/black">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tiet_born_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/born_date"
                        android:inputType="date"
                        android:focusable="false"
                        android:clickable="true"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_medium_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_medium_margin"
                    android:layout_marginTop="@dimen/activity_vertical_small_margin"
                    android:textColorHint="@android:color/black">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tiet_identification_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/identification_card"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_medium_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_medium_margin"
                    android:layout_marginTop="@dimen/activity_vertical_small_margin"
                    android:textColorHint="@android:color/black">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tiet_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cpp_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_medium_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_medium_margin"
                    android:layout_marginTop="@dimen/activity_vertical_small_margin"
                    android:textColorHint="@android:color/black">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tiet_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_medium_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_medium_margin"
                    android:layout_marginTop="@dimen/activity_vertical_small_margin"
                    android:textColorHint="@android:color/black">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tiet_cellphone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cellphone_number"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_medium_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_medium_margin"
                    android:layout_marginTop="@dimen/activity_vertical_small_margin"
                    android:textColorHint="@android:color/black">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tiet_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cpp_address"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/bt_request_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_medium_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_medium_margin"
                    android:layout_marginTop="@dimen/activity_vertical_small_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_small_margin"
                    android:background="@drawable/button_default_style"
                    android:text="@string/request_card"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_small" />


            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/ll_sended_request"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_horizontal_small_margin"
            android:layout_marginRight="@dimen/activity_horizontal_medium_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_medium_margin"
            android:orientation="vertical"
            android:visibility="gone"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/ok_message"
                    android:textSize="20sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical"
                android:gravity="bottom"
                android:layout_marginBottom="@dimen/activity_horizontal_small_margin">

                <Button
                    android:id="@+id/bt_accept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_default_style"
                    android:text="@string/accept"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_small" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>